Implement Gravity Update
