# go/go/model__gravity__id__patch_404_response.go
@@ -1,41 +1,0 @@
-/*
- * PiHole Management API
- *
- * A management webservice to be run locally on a PiHole instance
- *
- * API version: 1.0
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package openapi
-
-
-import (
-	"encoding/json"
-)
-
-
-
-type GravityIdPatch404Response struct {
-
-	Id int32 `json:"id,omitempty"`
-
-	Status string `json:"status,omitempty"`
-}
-
-// UnmarshalJSON sets *m to a copy of data while respecting defaults if specified.
-func (m *GravityIdPatch404Response) UnmarshalJSON(data []byte) error {
-
-	type Alias GravityIdPatch404Response // To avoid infinite recursion
-    return json.Unmarshal(data, (*Alias)(m))
-}
-
-// AssertGravityIdPatch404ResponseRequired checks if the required fields are not zero-ed
-func AssertGravityIdPatch404ResponseRequired(obj GravityIdPatch404Response) error {
-	return nil
-}
-
-// AssertGravityIdPatch404ResponseConstraints checks if the values respects the defined constraints
-func AssertGravityIdPatch404ResponseConstraints(obj GravityIdPatch404Response) error {
-	return nil
-}
